--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
+    "md5-file": "^5.0.0",
     "request": "^2.88.2"
   }
 }
